--- a/package.json
+++ b/package.json
@@ -1,39 +1,29 @@
 {
-    "name": "crudvale",
+    "name": "wilderquest",
     "private": true,
     "version": "0.0.1",
     "type": "module",
     "scripts": {
-        "lint:server": "biome lint --write src/server",
-        "lint:client": "biome lint --write src/client",
-        "lint": "pnpm run lint:server && pnpm run lint:client",
+        "build": "NODE_ENV=production rm -rf dist && vite build && tsc -p src/server/tsconfig.json && tsc-alias -p src/server/tsconfig.json",
+        "start": "NODE_ENV=production node dist/server/server.js",
+        "start:preview": "NODE_ENV=production tsx src/server/server.ts",
+        "start:bg": "nohup pnpm start > start.log 2>&1 & echo $! > .start.pid",
+        "dev": "NODE_ENV=development nodemon --verbose --watch src/server --ext ts,json --exec \"tsx src/server/server.ts\" --",
+        "dev:debug": "DEBUG=app:server:*,app:client:* NODE_ENV=development nodemon --verbose --watch src/server --ext ts,json --exec tsx src/server/server.ts --",
+        "dev:bg": "nohup pnpm dev > dev.log 2>&1 & echo $! > .dev.pid",
+        "check": "pnpm run typecheck && pnpm run lint",
         "typecheck:client": "tsc --noEmit -p src/client/tsconfig.json",
         "typecheck:server": "tsc --noEmit -p src/server/tsconfig.json",
         "typecheck": "pnpm run typecheck:client && pnpm run typecheck:server",
-        "dev": "NODE_ENV=development nodemon --verbose --watch src/server --ext ts,json --exec \"tsx src/server/server.ts\" --",
-        "start:preview": "NODE_ENV=production tsx src/server/server.ts",
-        "start": "NODE_ENV=production node dist/server/server.js",
-        "build": "NODE_ENV=production rm -rf dist && vite build && tsc -p src/server/tsconfig.json && tsc-alias -p src/server/tsconfig.json",
-        "dev:bg": "nohup pnpm dev > dev.log 2>&1 & echo $! > .dev.pid",
+        "lint:server": "biome lint --write src/server",
+        "lint:client": "biome lint --write src/client",
+        "lint": "pnpm run lint:server && pnpm run lint:client",
         "stop:dev": "kill $(cat .dev.pid 2>/dev/null || echo '') 2>/dev/null || true && rm -f .dev.pid",
-        "start:bg": "nohup pnpm start > start.log 2>&1 & echo $! > .start.pid",
         "stop:start": "kill $(cat .start.pid 2>/dev/null || echo '') 2>/dev/null || true && rm -f .start.pid",
         "stop:all": "pnpm stop:dev && pnpm stop:start",
         "status": "echo '=== Server Status ===' && (test -f .dev.pid && echo 'Dev server: RUNNING (PID:' $(cat .dev.pid) ')' || echo 'Dev server: STOPPED') && (test -f .start.pid && echo 'Prod server: RUNNING (PID:' $(cat .start.pid) ')' || echo 'Prod server: STOPPED') && echo 'Background processes:' && ps aux | grep -E '(node.*server|nodemon)' | grep -v grep | wc -l",
         "clean": "echo '=== Force Cleanup ===' && pkill -f 'node.*server.js' && pkill -f 'nodemon' && pkill -f 'tsx.*server.ts' && rm -f .dev.pid .start.pid && echo 'Cleanup complete'",
-        "check-processes": "echo '=== Process Check ===' && echo 'Node server processes:' && ps aux | grep -E '(node.*server|nodemon|tsx.*server)' | grep -v grep | wc -l && echo 'Total background processes:' && ps aux | grep -E '(node|jest|pnpm)' | grep -v grep | wc -l",
-        "test": "jest",
-        "test:watch": "jest --watch",
-        "test:coverage": "jest --coverage",
-        "test:server": "jest --testPathPatterns=src/server",
-        "test:client": "jest --testPathPatterns=src/client",
-        "mock-inat": "./scripts/enable-mock-mode.sh",
-        "seed:mock": "tsx src/server/scripts/seed-quests-mock.ts",
-        "dev:debug": "DEBUG=app:server:*,app:client:* NODE_ENV=development nodemon --verbose --watch src/server --ext ts,json --exec tsx src/server/server.ts --",
-        "dev:server": "DEBUG=app:server:* NODE_ENV=development nodemon --verbose --watch src/server --ext ts,json --exec tsx src/server/server.ts --",
-        "dev:client": "DEBUG=app:client:* NODE_ENV=development nodemon --verbose --watch src/server --ext ts,json --exec tsx src/server/server.ts --",
-        "dev:events": "DEBUG=app:client:events NODE_ENV=development nodemon --verbose --watch src/server --ext ts,json --exec tsx src/server/server.ts --",
-        "dev:full-debug": "DEBUG=app:server:*,app:client:* NODE_ENV=development nodemon --verbose --watch src/server --ext ts,json --exec tsx src/server/server.ts --"
+        "check-processes": "echo '=== Process Check ===' && echo 'Node server processes:' && ps aux | grep -E '(node.*server|nodemon|tsx.*server)' | grep -v grep | wc -l && echo 'Total background processes:' && ps aux | grep -E '(node|jest|pnpm)' | grep -v grep | wc -l"
     },
     "dependencies": {
         "@hookform/resolvers": "^4.1.3",
@@ -111,7 +101,6 @@
         "@types/cors": "^2.8.19",
         "@types/debug": "^4.1.12",
         "@types/express": "^5.0.3",
-        "@types/jest": "^30.0.0",
         "@types/jsonwebtoken": "^9.0.10",
         "@types/leaflet": "^1.9.20",
         "@types/lodash": "^4.17.20",
@@ -123,15 +112,16 @@
         "dbmate": "^2.28.0",
         "globals": "^15.15.0",
         "husky": "^9.1.7",
-        "jest": "^30.1.1",
         "nodemon": "^3.1.10",
-        "ts-jest": "^29.4.1",
         "tw-animate-css": "^1.3.7",
         "vite": "^6.3.5"
     },
     "packageManager": "pnpm@10.15.0+sha512.486ebc259d3e999a4e8691ce03b5cac4a71cbeca39372a9b762cb500cfdf0873e2cb16abe3d951b1ee2cf012503f027b98b6584e4df22524e0c7450d9ec7aa7b",
     "pnpm": {
-        "hoistPattern": ["@types/*", "typescript"],
+        "hoistPattern": [
+            "@types/*",
+            "typescript"
+        ],
         "onlyBuiltDependencies": [
             "@firebase/util",
             "@swc/core",
