Tidy types throughout codebase (/shared/types only for external API response types, other types moved to src/client or src/server files)

--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -23,6 +23,6 @@
             "@/*": ["./*"]
         }
     },
-    "include": ["./**/*.ts", "./**/*.tsx", "../shared/**/*.ts"],
+    "include": ["./**/*.ts", "./**/*.tsx"],
     "exclude": ["./**/__tests__/**/*", "./**/*.test.ts", "./**/*.spec.ts"]
 }
