--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -119,6 +119,6 @@
             "@shared/*": ["../shared/*"]
         }
     },
-    "include": ["./**/*.ts", "./**/*.tsx", "../shared/**/*.ts"],
+    "include": ["./**/*.ts", "./**/*.tsx"],
     "exclude": ["./**/__tests__/**/*", "./**/*.test.ts", "./**/*.spec.ts"]
 }
