--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -17,10 +17,11 @@
         "jsx": "react-jsx",
         "emitDeclarationOnly": false,
         "declaration": true,
-        "baseUrl": ".",
+        "baseUrl": "../..",
         "paths": {
-            "@shared/*": ["../shared/*"],
-            "@/*": ["./*"]
+            "@shared/*": ["./src/shared/*"],
+            "@/*": ["./src/client/*"],
+            "@server/*": ["./src/server/*"]
         }
     },
     "include": ["./**/*.ts", "./**/*.tsx"],
