--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
         "tsc-alias": "^1.8.16",
         "tsx": "^4.20.4",
         "typescript": "^5.9.2",
+        "usehooks-ts": "^3.1.1",
         "uuid": "^11.1.0",
         "vite-express": "^0.21.1",
         "winston": "^3.17.0",
@@ -117,7 +118,10 @@
     },
     "packageManager": "pnpm@10.15.0+sha512.486ebc259d3e999a4e8691ce03b5cac4a71cbeca39372a9b762cb500cfdf0873e2cb16abe3d951b1ee2cf012503f027b98b6584e4df22524e0c7450d9ec7aa7b",
     "pnpm": {
-        "hoistPattern": ["@types/*", "typescript"],
+        "hoistPattern": [
+            "@types/*",
+            "typescript"
+        ],
         "onlyBuiltDependencies": [
             "@firebase/util",
             "@swc/core",
