--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
         "node-emoji": "^2.2.0",
         "rate-limiter-flexible": "^7.2.0",
         "react": "^19.1.1",
+        "react-confetti": "^6.4.0",
         "react-device-frameset": "^1.3.4",
         "react-dom": "^19.1.1",
         "react-hook-form": "^7.62.0",
