--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -121,6 +121,6 @@
         "skipLibCheck": true
         /* Skip type checking all .d.ts files. */
     },
-    "include": ["./**/*.ts", "./**/*.tsx"],
+    "include": ["./**/*.ts","./**/*.mts","./**/*.tsx"],
     "exclude": ["./**/__tests__/**/*", "./**/*.test.ts", "./**/*.spec.ts"]
 }
